src/main/java/org/shkandyuk/nuxmv/grammar/antlr/NuXmvParser.java
// Generated from /home/denis/Documents/5_ITMO/NIR/nuXmv/src/main/java/org/shkandyuk/nuxmv/grammar/antlr/NuXmvParser.g4 by ANTLR 4.13.1

    package org.shkandyuk.nuxmv.grammar.antlr;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class NuXmvParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		MODULE=1, DEFINE=2, MDEFINE=3, CONSTANTS=4, VAR=5, IVAR=6, PROCESS=7, 
		CASE=8, ESAC=9, FROZENVAR=10, TRANS=11, INVAR=12, SPEC=13, CTLSPEC=14, 
		LTLSPEC=15, PSLSPEC=16, COMPUTE=17, NAME=18, INVARSPEC=19, FAIRNESS=20, 
		JUSTICE=21, COMPASSION=22, ISA=23, ASSIGN=24, CONSTRAINT=25, SIMPWFF=26, 
		CTLWFF=27, LTLWFF=28, PSLWFF=29, COMPWFF=30, IN=31, MIN=32, MAX=33, MIRROR=34, 
		PRED=35, PREDICATES=36, BI_WORD1=37, BI_BOOL=38, BI_SIGNED=39, BI_UNSIGNED=40, 
		BI_EXTEND=41, BI_RESIZE=42, BI_SIZEOF=43, BI_UWCONST=44, BI_SWCONST=45, 
		BI_INIT=46, BI_SELF=47, BI_COUNT=48, BI_ABS=49, BI_MAX=50, BI_MIN=51, 
		T_ARRAY=52, T_OF=53, T_BOOLEAN=54, T_TRUE=55, T_FALSE=56, T_INTEGER=57, 
		T_REAL=58, T_WORD=59, OP_EX=60, OP_AX=61, OP_EF=62, OP_AF=63, OP_EG=64, 
		OP_AG=65, OP_E=66, OP_F=67, OP_O=68, OP_G=69, OP_H=70, OP_X=71, OP_Y=72, 
		OP_Z=73, OP_A=74, OP_U=75, OP_S=76, OP_V=77, OP_T=78, OP_BU=79, OP_EBF=80, 
		OP_ABF=81, OP_EBG=82, OP_ABG=83, OP_NEXT=84, OP_MOD=85, OP_UNION=86, OP_IN=87, 
		OP_XOR=88, OP_XNOR=89, OP_AND=90, OP_OR=91, EXCLAMATION=92, DOT=93, PLUS=94, 
		MINUS=95, MINUS_ARROW=96, L_ARROW=97, R_ARROW=98, ASTERISK=99, SLASH=100, 
		EXCLAMATION_EQ=101, IDENTIFICATOR=102, ASSIGN_OP=103, STATE_ASSIGN=104, 
		L_SQUARE_BRACKET=105, R_SQUARE_BRACKET=106, L_BRACKET=107, R_BRACKET=108, 
		L_BRACE=109, R_BRACE=110, SEMICOLON=111, COLON=112, COMMA=113, INTEGER=114, 
		BIN=115, OCT=116, DEC=117, HEX=118, COMMENT=119, LINE_COMMENT=120, WS=121, 
		BR=122, BAD_CHARACTER=123;
	public static final int
		RULE_root = 0, RULE_module = 1, RULE_variables_declarations = 2, RULE_variables_list = 3, 
		RULE_moduleBody = 4, RULE_varDeclaration = 5, RULE_assignment = 6, RULE_assign_statment = 7, 
		RULE_init = 8, RULE_init_statement = 9, RULE_next = 10, RULE_next_statement = 11, 
		RULE_spec = 12, RULE_definment = 13, RULE_expressions = 14, RULE_expression = 15, 
		RULE_unar_ops = 16, RULE_spec_operators = 17, RULE_bit_ops = 18, RULE_bin_ops = 19, 
		RULE_case = 20, RULE_case_statment = 21, RULE_type = 22, RULE_value_list = 23, 
		RULE_value = 24;
	private static String[] makeRuleNames() {
		return new String[] {
			"root", "module", "variables_declarations", "variables_list", "moduleBody", 
			"varDeclaration", "assignment", "assign_statment", "init", "init_statement", 
			"next", "next_statement", "spec", "definment", "expressions", "expression", 
			"unar_ops", "spec_operators", "bit_ops", "bin_ops", "case", "case_statment", 
			"type", "value_list", "value"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'MODULE'", "'DEFINE'", "'MDEFINE'", "'CONSTANTS'", "'VAR'", "'IVAR'", 
			"'process'", "'case'", "'esac'", "'FROZENVAR'", "'TRANS'", "'INVAR'", 
			"'SPEC'", "'CTLSPEC'", "'LTLSPEC'", "'PSLSPEC'", "'COMPUTE'", "'NAME'", 
			"'INVARSPEC'", "'FAIRNESS'", "'JUSTICE'", "'COMPASSION'", "'ISA'", "'ASSIGN'", 
			"'CONSTRAINT'", "'SIMPWFF'", "'CTLWFF'", "'LTLWFF'", "'PSLWFF'", "'COMPWFF'", 
			"'IN'", "'MIN'", "'MAX'", "'MIRROR'", "'PRED'", "'PREDICATES'", "'word1'", 
			"'bool'", "'signed'", "'unsigned'", "'extend'", "'resize'", "'sizeof'", 
			"'uwconst'", "'swconst'", "'init'", "'self'", "'count'", "'abs'", "'max'", 
			"'min'", "'array'", "'of'", "'boolean'", "'TRUE'", "'FALSE'", "'integer'", 
			"'real'", "'word'", "'EX'", "'AX'", "'EF'", "'AF'", "'EG'", "'AG'", "'E'", 
			"'F'", "'O'", "'G'", "'H'", "'X'", "'Y'", "'Z'", "'A'", "'U'", "'S'", 
			"'V'", "'T'", "'BU'", "'EBF'", "'ABF'", "'EBG'", "'ABG'", "'next'", "'mod'", 
			"'union'", "'in'", "'xor'", "'xnor'", "'&'", "'|'", "'!'", "'.'", "'+'", 
			"'-'", "'->'", "'<'", "'>'", "'*'", "'/'", "'!='", null, "':='", "'='", 
			"'['", "']'", "'('", "')'", "'{'", "'}'", "';'", "':'", "','"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "MODULE", "DEFINE", "MDEFINE", "CONSTANTS", "VAR", "IVAR", "PROCESS", 
			"CASE", "ESAC", "FROZENVAR", "TRANS", "INVAR", "SPEC", "CTLSPEC", "LTLSPEC", 
			"PSLSPEC", "COMPUTE", "NAME", "INVARSPEC", "FAIRNESS", "JUSTICE", "COMPASSION", 
			"ISA", "ASSIGN", "CONSTRAINT", "SIMPWFF", "CTLWFF", "LTLWFF", "PSLWFF", 
			"COMPWFF", "IN", "MIN", "MAX", "MIRROR", "PRED", "PREDICATES", "BI_WORD1", 
			"BI_BOOL", "BI_SIGNED", "BI_UNSIGNED", "BI_EXTEND", "BI_RESIZE", "BI_SIZEOF", 
			"BI_UWCONST", "BI_SWCONST", "BI_INIT", "BI_SELF", "BI_COUNT", "BI_ABS", 
			"BI_MAX", "BI_MIN", "T_ARRAY", "T_OF", "T_BOOLEAN", "T_TRUE", "T_FALSE", 
			"T_INTEGER", "T_REAL", "T_WORD", "OP_EX", "OP_AX", "OP_EF", "OP_AF", 
			"OP_EG", "OP_AG", "OP_E", "OP_F", "OP_O", "OP_G", "OP_H", "OP_X", "OP_Y", 
			"OP_Z", "OP_A", "OP_U", "OP_S", "OP_V", "OP_T", "OP_BU", "OP_EBF", "OP_ABF", 
			"OP_EBG", "OP_ABG", "OP_NEXT", "OP_MOD", "OP_UNION", "OP_IN", "OP_XOR", 
			"OP_XNOR", "OP_AND", "OP_OR", "EXCLAMATION", "DOT", "PLUS", "MINUS", 
			"MINUS_ARROW", "L_ARROW", "R_ARROW", "ASTERISK", "SLASH", "EXCLAMATION_EQ", 
			"IDENTIFICATOR", "ASSIGN_OP", "STATE_ASSIGN", "L_SQUARE_BRACKET", "R_SQUARE_BRACKET", 
			"L_BRACKET", "R_BRACKET", "L_BRACE", "R_BRACE", "SEMICOLON", "COLON", 
			"COMMA", "INTEGER", "BIN", "OCT", "DEC", "HEX", "COMMENT", "LINE_COMMENT", 
			"WS", "BR", "BAD_CHARACTER"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "NuXmvParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public NuXmvParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RootContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(NuXmvParser.EOF, 0); }
		public List<ModuleContext> module() {
			return getRuleContexts(ModuleContext.class);
		}
		public ModuleContext module(int i) {
			return getRuleContext(ModuleContext.class,i);
		}
		public RootContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_root; }
	}

	public final RootContext root() throws RecognitionException {
		RootContext _localctx = new RootContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_root);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(53);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==MODULE) {
				{
				{
				setState(50);
				module();
				}
				}
				setState(55);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(56);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ModuleContext extends ParserRuleContext {
		public TerminalNode MODULE() { return getToken(NuXmvParser.MODULE, 0); }
		public TerminalNode IDENTIFICATOR() { return getToken(NuXmvParser.IDENTIFICATOR, 0); }
		public ModuleBodyContext moduleBody() {
			return getRuleContext(ModuleBodyContext.class,0);
		}
		public Variables_declarationsContext variables_declarations() {
			return getRuleContext(Variables_declarationsContext.class,0);
		}
		public List<SpecContext> spec() {
			return getRuleContexts(SpecContext.class);
		}
		public SpecContext spec(int i) {
			return getRuleContext(SpecContext.class,i);
		}
		public ModuleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_module; }
	}

	public final ModuleContext module() throws RecognitionException {
		ModuleContext _localctx = new ModuleContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_module);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(58);
			match(MODULE);
			setState(59);
			match(IDENTIFICATOR);
			setState(61);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==L_BRACKET) {
				{
				setState(60);
				variables_declarations();
				}
			}

			setState(63);
			moduleBody();
			setState(67);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==SPEC || _la==LTLSPEC) {
				{
				{
				setState(64);
				spec();
				}
				}
				setState(69);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Variables_declarationsContext extends ParserRuleContext {
		public TerminalNode L_BRACKET() { return getToken(NuXmvParser.L_BRACKET, 0); }
		public Variables_listContext variables_list() {
			return getRuleContext(Variables_listContext.class,0);
		}
		public TerminalNode R_BRACKET() { return getToken(NuXmvParser.R_BRACKET, 0); }
		public Variables_declarationsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variables_declarations; }
	}

	public final Variables_declarationsContext variables_declarations() throws RecognitionException {
		Variables_declarationsContext _localctx = new Variables_declarationsContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_variables_declarations);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(70);
			match(L_BRACKET);
			setState(71);
			variables_list();
			setState(72);
			match(R_BRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Variables_listContext extends ParserRuleContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode COMMA() { return getToken(NuXmvParser.COMMA, 0); }
		public Variables_listContext variables_list() {
			return getRuleContext(Variables_listContext.class,0);
		}
		public TerminalNode IDENTIFICATOR() { return getToken(NuXmvParser.IDENTIFICATOR, 0); }
		public Variables_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variables_list; }
	}

	public final Variables_listContext variables_list() throws RecognitionException {
		Variables_listContext _localctx = new Variables_listContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_variables_list);
		try {
			setState(79);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(74);
				expression(0);
				setState(75);
				match(COMMA);
				setState(76);
				variables_list();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(78);
				match(IDENTIFICATOR);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ModuleBodyContext extends ParserRuleContext {
		public VarDeclarationContext varDeclaration() {
			return getRuleContext(VarDeclarationContext.class,0);
		}
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public DefinmentContext definment() {
			return getRuleContext(DefinmentContext.class,0);
		}
		public ModuleBodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_moduleBody; }
	}

	public final ModuleBodyContext moduleBody() throws RecognitionException {
		ModuleBodyContext _localctx = new ModuleBodyContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_moduleBody);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(81);
			varDeclaration();
			setState(82);
			assignment();
			setState(84);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==DEFINE) {
				{
				setState(83);
				definment();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VarDeclarationContext extends ParserRuleContext {
		public TerminalNode VAR() { return getToken(NuXmvParser.VAR, 0); }
		public List<TerminalNode> IDENTIFICATOR() { return getTokens(NuXmvParser.IDENTIFICATOR); }
		public TerminalNode IDENTIFICATOR(int i) {
			return getToken(NuXmvParser.IDENTIFICATOR, i);
		}
		public List<TerminalNode> COLON() { return getTokens(NuXmvParser.COLON); }
		public TerminalNode COLON(int i) {
			return getToken(NuXmvParser.COLON, i);
		}
		public List<TerminalNode> SEMICOLON() { return getTokens(NuXmvParser.SEMICOLON); }
		public TerminalNode SEMICOLON(int i) {
			return getToken(NuXmvParser.SEMICOLON, i);
		}
		public List<TypeContext> type() {
			return getRuleContexts(TypeContext.class);
		}
		public TypeContext type(int i) {
			return getRuleContext(TypeContext.class,i);
		}
		public List<TerminalNode> L_BRACE() { return getTokens(NuXmvParser.L_BRACE); }
		public TerminalNode L_BRACE(int i) {
			return getToken(NuXmvParser.L_BRACE, i);
		}
		public List<ExpressionsContext> expressions() {
			return getRuleContexts(ExpressionsContext.class);
		}
		public ExpressionsContext expressions(int i) {
			return getRuleContext(ExpressionsContext.class,i);
		}
		public List<TerminalNode> R_BRACE() { return getTokens(NuXmvParser.R_BRACE); }
		public TerminalNode R_BRACE(int i) {
			return getToken(NuXmvParser.R_BRACE, i);
		}
		public List<Variables_declarationsContext> variables_declarations() {
			return getRuleContexts(Variables_declarationsContext.class);
		}
		public Variables_declarationsContext variables_declarations(int i) {
			return getRuleContext(Variables_declarationsContext.class,i);
		}
		public VarDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varDeclaration; }
	}

	public final VarDeclarationContext varDeclaration() throws RecognitionException {
		VarDeclarationContext _localctx = new VarDeclarationContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_varDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(86);
			match(VAR);
			setState(106);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==IDENTIFICATOR) {
				{
				{
				setState(87);
				match(IDENTIFICATOR);
				setState(88);
				match(COLON);
				setState(101);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case T_ARRAY:
				case T_BOOLEAN:
				case T_INTEGER:
				case T_REAL:
					{
					setState(89);
					type();
					}
					break;
				case L_BRACE:
					{
					setState(90);
					match(L_BRACE);
					setState(91);
					expressions();
					setState(92);
					match(R_BRACE);
					}
					break;
				case IDENTIFICATOR:
					{
					setState(94);
					match(IDENTIFICATOR);
					setState(98);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==L_BRACKET) {
						{
						{
						setState(95);
						variables_declarations();
						}
						}
						setState(100);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(103);
				match(SEMICOLON);
				}
				}
				setState(108);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AssignmentContext extends ParserRuleContext {
		public TerminalNode ASSIGN() { return getToken(NuXmvParser.ASSIGN, 0); }
		public List<Assign_statmentContext> assign_statment() {
			return getRuleContexts(Assign_statmentContext.class);
		}
		public Assign_statmentContext assign_statment(int i) {
			return getRuleContext(Assign_statmentContext.class,i);
		}
		public AssignmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignment; }
	}

	public final AssignmentContext assignment() throws RecognitionException {
		AssignmentContext _localctx = new AssignmentContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_assignment);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(109);
			match(ASSIGN);
			}
			setState(113);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==BI_INIT || _la==OP_NEXT) {
				{
				{
				setState(110);
				assign_statment(0);
				}
				}
				setState(115);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Assign_statmentContext extends ParserRuleContext {
		public Init_statementContext init_statement() {
			return getRuleContext(Init_statementContext.class,0);
		}
		public TerminalNode STATE_ASSIGN() { return getToken(NuXmvParser.STATE_ASSIGN, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode ASSIGN_OP() { return getToken(NuXmvParser.ASSIGN_OP, 0); }
		public TerminalNode SEMICOLON() { return getToken(NuXmvParser.SEMICOLON, 0); }
		public Next_statementContext next_statement() {
			return getRuleContext(Next_statementContext.class,0);
		}
		public TerminalNode COLON() { return getToken(NuXmvParser.COLON, 0); }
		public InitContext init() {
			return getRuleContext(InitContext.class,0);
		}
		public NextContext next() {
			return getRuleContext(NextContext.class,0);
		}
		public Assign_statmentContext assign_statment() {
			return getRuleContext(Assign_statmentContext.class,0);
		}
		public Assign_statmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assign_statment; }
	}

	public final Assign_statmentContext assign_statment() throws RecognitionException {
		return assign_statment(0);
	}

	private Assign_statmentContext assign_statment(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		Assign_statmentContext _localctx = new Assign_statmentContext(_ctx, _parentState);
		Assign_statmentContext _prevctx = _localctx;
		int _startState = 14;
		enterRecursionRule(_localctx, 14, RULE_assign_statment, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(137);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				{
				setState(117);
				init_statement();
				setState(118);
				match(STATE_ASSIGN);
				setState(119);
				expression(0);
				}
				break;
			case 2:
				{
				setState(121);
				init_statement();
				setState(122);
				match(ASSIGN_OP);
				setState(123);
				expression(0);
				setState(124);
				match(SEMICOLON);
				}
				break;
			case 3:
				{
				setState(126);
				next_statement();
				setState(127);
				match(STATE_ASSIGN);
				setState(128);
				expression(0);
				}
				break;
			case 4:
				{
				setState(130);
				next_statement();
				setState(131);
				_la = _input.LA(1);
				if ( !(_la==ASSIGN_OP || _la==COLON) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(132);
				expression(0);
				setState(133);
				match(SEMICOLON);
				}
				break;
			case 5:
				{
				setState(135);
				init();
				}
				break;
			case 6:
				{
				setState(136);
				next();
				}
				break;
			}
			_ctx.stop = _input.LT(-1);
			setState(152);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,11,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(150);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
					case 1:
						{
						_localctx = new Assign_statmentContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_assign_statment);
						setState(139);
						if (!(precpred(_ctx, 9))) throw new FailedPredicateException(this, "precpred(_ctx, 9)");
						setState(140);
						match(COLON);
						setState(141);
						expression(0);
						setState(142);
						match(SEMICOLON);
						}
						break;
					case 2:
						{
						_localctx = new Assign_statmentContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_assign_statment);
						setState(144);
						if (!(precpred(_ctx, 4))) throw new FailedPredicateException(this, "precpred(_ctx, 4)");
						setState(145);
						match(ASSIGN_OP);
						setState(146);
						expression(0);
						}
						break;
					case 3:
						{
						_localctx = new Assign_statmentContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_assign_statment);
						setState(147);
						if (!(precpred(_ctx, 3))) throw new FailedPredicateException(this, "precpred(_ctx, 3)");
						setState(148);
						match(STATE_ASSIGN);
						setState(149);
						expression(0);
						}
						break;
					}
					} 
				}
				setState(154);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,11,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InitContext extends ParserRuleContext {
		public Init_statementContext init_statement() {
			return getRuleContext(Init_statementContext.class,0);
		}
		public TerminalNode ASSIGN_OP() { return getToken(NuXmvParser.ASSIGN_OP, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public InitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_init; }
	}

	public final InitContext init() throws RecognitionException {
		InitContext _localctx = new InitContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_init);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(155);
			init_statement();
			setState(156);
			match(ASSIGN_OP);
			setState(157);
			expression(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Init_statementContext extends ParserRuleContext {
		public TerminalNode BI_INIT() { return getToken(NuXmvParser.BI_INIT, 0); }
		public TerminalNode L_BRACKET() { return getToken(NuXmvParser.L_BRACKET, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode R_BRACKET() { return getToken(NuXmvParser.R_BRACKET, 0); }
		public Init_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_init_statement; }
	}

	public final Init_statementContext init_statement() throws RecognitionException {
		Init_statementContext _localctx = new Init_statementContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_init_statement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(159);
			match(BI_INIT);
			setState(160);
			match(L_BRACKET);
			setState(161);
			expression(0);
			setState(162);
			match(R_BRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class NextContext extends ParserRuleContext {
		public Next_statementContext next_statement() {
			return getRuleContext(Next_statementContext.class,0);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public NextContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_next; }
	}

	public final NextContext next() throws RecognitionException {
		NextContext _localctx = new NextContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_next);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(164);
			next_statement();
			setState(165);
			expression(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
